--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,22 @@
-﻿# CMakeList.txt : Top-level CMake project file, do global configuration
-# and include sub-projects here.
-#
+﻿
+# Top level project. Treating this like a VS solution
 cmake_minimum_required (VERSION 3.8)
-
 project ("RfgTools++ Solution")
 
-# TODO: Stick this in another cmake file
 # Update git submodules
-find_package(Git QUIET)
-if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
-    option(GIT_SUBMODULE "Check submodules during build" ON)
-    if(GIT_SUBMODULE)
-        message(STATUS "Submodule update")
-        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
-                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-                        RESULT_VARIABLE GIT_SUBMOD_RESULT)
+include("GitSubmodule.cmake")
 
-        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
-            message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
-        endif()
-    endif()
+# Error if submodules not loaded. Just check one of them for now
+if(NOT EXISTS "${PROJECT_SOURCE_DIR}/dependencies/zlib/CMakeLists.txt")
+    message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
 endif()
-
-# Error if submodules not loaded
-#if(NOT EXISTS "${PROJECT_SOURCE_DIR}/dependencies/glfw/CMakeLists.txt")
-#    message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
-#endif()
 
 set(CMAKE_CXX_STANDARD           20)
 set(CMAKE_CXX_STANDARD_REQUIRED  ON)
 set(CMAKE_CXX_EXTENSIONS         OFF)
 
 # Include sub-projects.
-add_subdirectory ("Test App")
-add_subdirectory ("Common")
-add_subdirectory ("RfgTools++")
+add_subdirectory("Dependencies/zlib")
+add_subdirectory("Common")
+add_subdirectory("Test App")
+add_subdirectory("RfgTools++")
