Extraction for simple packfile data layout

--- a/RfgTools++/CMakeLists.txt
+++ b/RfgTools++/CMakeLists.txt
@@ -7,10 +7,11 @@ project (RfgTools++ VERSION 1.0.0
 # Get list of source files in project src folders recursively
 # Places in SOURCES variable
 file(GLOB_RECURSE SOURCES 
+    ${CMAKE_SOURCE_DIR}/RfgTools++/RfgTools++/*.h
     ${CMAKE_SOURCE_DIR}/RfgTools++/RfgTools++/*.cpp
     # TODO: Hook this up as a static lib once it's got a CMakeLists.txt. For now this works
     ${CMAKE_SOURCE_DIR}/Dependencies/BinaryTools/*.h
-    ${CMAKE_SOURCE_DIR}//Dependencies/BinaryTools/*.cpp
+    ${CMAKE_SOURCE_DIR}/Dependencies/BinaryTools/*.cpp
 )
 
 # Add source to this project's static library (.lib)
@@ -19,7 +20,9 @@ add_library(RfgTools++ STATIC ${SOURCES})
 # Add include directories
 target_include_directories(RfgTools++ SYSTEM PRIVATE
     ${CMAKE_SOURCE_DIR}/Common/
+    ${CMAKE_SOURCE_DIR}/Dependencies/zlib/
     ${CMAKE_SOURCE_DIR}/Dependencies/BinaryTools/ # TODO: Hook this up as a static lib once it's got a CMakeLists.txt
 )
 
+target_link_libraries(RfgTools++ PRIVATE zlibstatic)
 target_link_libraries(RfgTools++ PRIVATE Common)
