Save partial chunk file reader
Can read the render data (mesh format + material data) since that's already pretty well understood, but haven't gotten started on the destruction data or collision meshes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ﻿
-set(BUILD_RFGTOOLS_TEST_APP FALSE)
+set(BUILD_RFGTOOLS_TEST_APP TRUE)
 
 # Top level project. Treating this like a VS solution
 cmake_minimum_required (VERSION 3.8)
