Add option to not build own copy of zlib
Allows easier compatibility with assimp by projects using both RfgTools++ and assimp. By setting RFGTOOLS_BUILD_ZLIB to OFF it won't build zlib and instead will rely on another cmake module building and exporting a zlib target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(BUILD_RFGTOOLS_TEST_APP FALSE)
 cmake_minimum_required (VERSION 3.8)
 project ("RfgTools++ Solution")
 
+option(RFGTOOLS_BUILD_ZLIB "If disabled RfgTools++ won't build zlib and instead will rely on another module building and exporting it's target" ON)
+
 # Update git submodules
 include("GitSubmodule.cmake")
 
@@ -18,9 +20,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED  ON)
 set(CMAKE_CXX_EXTENSIONS         OFF)
 
 # Include sub-projects.
-add_subdirectory("Dependencies/zlib")
-# Rename this again because zlib infuriatingly renames it and causes compile errors
-file(RENAME ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/zlib/zconf.h.included ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/zlib/zconf.h)
+if(RFGTOOLS_BUILD_ZLIB)
+    add_subdirectory("Dependencies/zlib")
+    # Rename this again because zlib infuriatingly renames it and causes compile errors
+    file(RENAME ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/zlib/zconf.h.included ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/zlib/zconf.h)
+endif()
 
 add_subdirectory("Common")
 if(BUILD_RFGTOOLS_TEST_APP)
