Downgrade zlib to 1.2.3
Matching version used by RFG in case there are compat issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,18 +9,18 @@ project ("RfgTools++ Solution")
 include("GitSubmodule.cmake")
 
 # Error if submodules not loaded. Just check one of them for now
-if(NOT EXISTS "${PROJECT_SOURCE_DIR}/dependencies/zlib/CMakeLists.txt")
-    message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
-endif()
+# if(NOT EXISTS "${PROJECT_SOURCE_DIR}/dependencies/zlib/CMakeLists.txt")
+#     message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
+# endif()
 
 set(CMAKE_CXX_STANDARD           20)
 set(CMAKE_CXX_STANDARD_REQUIRED  ON)
 set(CMAKE_CXX_EXTENSIONS         OFF)
 
 # Include sub-projects.
-add_subdirectory("Dependencies/zlib")
+#add_subdirectory("Dependencies/zlib")
 # Rename this again because zlib infuriatingly renames it and causes compile errors
-file(RENAME ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/zlib/zconf.h.included ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/zlib/zconf.h)
+#file(RENAME ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/zlib/zconf.h.included ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/zlib/zconf.h)
 
 add_subdirectory("Common")
 if(BUILD_RFGTOOLS_TEST_APP)
