--- a/RfgTools++/CMakeLists.txt
+++ b/RfgTools++/CMakeLists.txt
@@ -12,6 +12,26 @@ file(GLOB_RECURSE SOURCES
     # TODO: Hook this up as a static lib once it's got a CMakeLists.txt. For now this works
     ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/BinaryTools/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/BinaryTools/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/zlib.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/zlib.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/adler32.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/compress.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/zutil.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/inflate.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/inflate.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/uncompr.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/deflate.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/deflate.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/crc32.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/crc32.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/infback.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/inffast.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/inffast.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/inffixed.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/inftrees.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/inftrees.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/trees.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/trees.h
 )
 
 # Add source to this project's static library (.lib)
@@ -26,5 +46,5 @@ target_include_directories(RfgTools++ SYSTEM PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/BinaryTools/ # TODO: Hook this up as a static lib once it's got a CMakeLists.txt
 )
 
-target_link_libraries(RfgTools++ PRIVATE zlibstatic)
+#target_link_libraries(RfgTools++ PRIVATE zlibstatic)
 target_link_libraries(RfgTools++ PRIVATE Common)
