Add support for @streams.xml and add some str2_pc specific packing code

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Dependencies/zlib"]
 	path = Dependencies/zlib
 	url = https://github.com/madler/zlib.git
+[submodule "Dependencies/tinyxml2"]
+	path = Dependencies/tinyxml2
+	url = https://github.com/leethomason/tinyxml2.git
