Replace obj mesh export with gltf
Gltf has a lot more features and allows multiple submeshes, lod levels, and other data to be stored in one file, along with other advantages.

This is useful for static/character meshes but will be critical for exporting high lod terrain meshes since they have hundreds of render blocks. The whole maps high lod terrain converted to objs results in over 50000 obj files. Even after 8 hours blender wasn't done importing them. With gltf this could be stored in a single file and imported much quicker.

--- a/RfgTools++/CMakeLists.txt
+++ b/RfgTools++/CMakeLists.txt
@@ -4,9 +4,11 @@ project (RfgTools++ VERSION 1.0.0
                   DESCRIPTION "RfgTools++"
                   LANGUAGES CXX)
 
+set(TINYGLTF_HEADER_ONLY ON)
+
 # Get list of source files in project src folders recursively
 # Places in SOURCES variable
-file(GLOB_RECURSE SOURCES 
+file(GLOB_RECURSE SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/RfgTools++/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/RfgTools++/*.cpp
     # TODO: Hook this up as a static lib once it's got a CMakeLists.txt. For now this works
@@ -50,6 +52,7 @@ target_include_directories(RfgTools++ SYSTEM PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/zlib/
     ${CMAKE_SOURCE_DIR}/Dependencies/tinyxml2
     ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/BinaryTools/ # TODO: Hook this up as a static lib once it's got a CMakeLists.txt
+    ${CMAKE_CURRENT_SOURCE_DIR}/../Dependencies/tinygltf/
 )
 
 #target_link_libraries(RfgTools++ PRIVATE zlibstatic)
