--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Dependencies/tinyxml2"]
 	path = Dependencies/tinyxml2
 	url = https://github.com/leethomason/tinyxml2.git
+[submodule "Dependencies/tinygltf"]
+	path = Dependencies/tinygltf
+	url = https://github.com/syoyo/tinygltf.git
